...
    <string name="resolve_host_field_name">Connect-to host</string>
    <string name="resolve_port_field_name">Connect-to port</string>
    <string name="resolve_match_host_field_name">Match host</string>
    <string name="resolve_match_port_field_name">Match port</string>
    <string name="resolve_match_host_port_field_name">Match host/port</string>
    <string name="resolve_all_fields">Value</string>
    <string name="header_name_field_name">Header name</string>
    <string name="header_value_field_name">Header value</string>
    <string name="basic_auth_username_field_name">Basic auth username</string>
    <string name="basic_auth_password_field_name">Basic auth password</string>
    <string name="username_field_name">Username</string>
    <string name="password_field_name">Password</string>
    <string name="password_confirm_field_name">Confirm password</string>
    <string name="invalid_no_match">Values do not match</string>
    <string name="invalid_no_value">No value specified</string>
    <string name="invalid_number_format">Invalid format</string>
    <string name="invalid_host_format">No valid host or IP address</string>
    <string name="invalid_url_format">No valid URL</string>
    <string name="invalid_file_name">No valid filename</string>
    <string name="invalid_folder_name">No valid folder path</string>
    <string name="invalid_characters">Value contains invalid characters</string>
    <string name="invalid_exists">Value already exists</string>
    <string name="invalid_must_exist">At least one value must be specified</string>
    <string name="invalid_range_minimum">Minimum: %d</string>
    <string name="invalid_range_maximum">Maximum: %d</string>
    <string name="invalid_length_maximum">Maximum length: %d</string>
    <string name="invalid_length_minimum">Minimum length: %d</string>
...
